@@ -6,4 +6,3 @@
 +(try to)track route changes (IP route record option)
 +allow send volume to be specified (instead of duration/rate)
 +meet more the spirit of IPPM (connectivity test, etc.)
-+finish automatic traffic capture option
